[package]
name = "tui_test"
version = "0.1.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2018"

[dependencies]
tui = "~0.13"
termion = "~1.5"
rand = "0.7"
argh = "0.1"

[[bin]]
name = "tui_test"
path = "src/bin/main.rs"
doc = false

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
